# DIT-exam

./: .gitignore  Dockerfile  docker-compose.yml  fix_frontmatter.py  main.py  migrate_progress.py  progress.json  pyproject.toml  test_preprocess.py
.nicegui/: storage-user-c8e17970-7023-4155-9c0d-716c4374adf5.json
database/: _template.md  ae_two_mic_correlation.md  analytic_signal_definition.md  cepstrum_formula_definition.md  charge_amplifier_schematic.md  cmos_fault_sequential_behavior.md  coil_inductance_measurement.md  differential_probe_characteristics.md  eddy_current_crack_effect.md  eddy_current_crack_signal_graph.md  eddy_current_depth.md  electrodynamic_damping_control.md  emat_sensor_principle.md  emissivity_dependencies.md  four_point_measurement_network.md  gear_fault_calculation_example_3000rpm.md  healthy_shaft_signal.md  hyperbolic_triangulation.md  lfsr_pseudo_random_generation.md  noise_characterization_spectral_density.md  optimal_time_freq_analysis.md  piezo_accelerometer_range.md  question_01.md  question_03.md  question_04.md  question_07.md  question_09.md  question_11.md  question_13.md  subcritical_angle_waves.md  sync_averaging_limitations.md  sync_averaging_uncertainty.md  thermography_principles.md  thermography_uncertainty.md  window_selection_amplitude_accuracy.md  window_selection_weak_signal.md
database/CGT/: 2021-01-21_01.md  2021-01-21_02.md  2021-01-21_03.md  2023-01-09_01.md  2023-01-09_02.md  2023-01-09_03.md  (+28 more)
scripts/: ofd_questions.txt  parser_drs.py  parser_ofd.py  verify_questions.py
tests/: test_multiuser.py  test_tracks.py
(+242 files in other folders)
